--- a/public/default/server/css/login.css
+++ b/public/default/server/css/login.css
@@ -17,10 +17,10 @@
 .loginWrap {
   position: absolute;
   width: 500px;
-  height: 370px;
+  height: 380px;
   top: 50%;
   left: 50%;
-  margin-top: -185px;
+  margin-top: -190px;
   margin-left: -250px;
   padding: 20px 10px;
   background-color: #fff;
@@ -45,6 +45,15 @@
 }
 .layui-input.codeInput {
   width: 70%;
+}
+.registDeel {
+  margin-bottom: 10px;
+}
+.registDeel a {
+  color: #1E9FFF;
+}
+.registDeel a:hover {
+  opacity: .8;
 }
 .bindingInner {
   width: 500px;
@@ -91,7 +100,7 @@
 }
 .errorWrap {
   position: relative;
-  height: 20px;
+  height: 40px;
 }
 .loginError {
   position: absolute;
@@ -105,10 +114,6 @@
 }
 .loginError i {
   vertical-align: middle;
-}
-.loginContent,
-.changeForm {
-  margin-top: 20px;
 }
 .changepWrap {
   max-width: 600px;
