--- a/public/default/server/css/login.css
+++ b/public/default/server/css/login.css
@@ -13,7 +13,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background: url(../images/loginBg.png) center center no-repeat;
+    background: url(../images/bg.png) center center no-repeat;
 }
 
 .loginWrap {
