--- a/public/default/server/css/base.css
+++ b/public/default/server/css/base.css
@@ -147,7 +147,7 @@ a:focus {
 .layui-form-item {
   position: relative;
 }
-.Validform_checktip {
+/*.Validform_checktip {
   display: none;
 }
 .Validform_error {
@@ -159,7 +159,7 @@ a:focus {
 }
 .Validform_error i {
   vertical-align: middle;
-}
+}*/
 .forLineheight {
   line-height: 38px;
 }
