--- a/public/default/server/css/login.less
+++ b/public/default/server/css/login.less
@@ -1,20 +1,9 @@
-//首页
-.indexBg{
-position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: url(../images/indexBg.jpg) center center no-repeat;
-}
 //登录页面
-.loginBg{
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: url(../images/loginBg.png) center center no-repeat;
+.loginContent{
+    padding: 0 10px;
+}
+.layui-tab{
+    margin: 0;
 }
 .loginWrap{
     position: absolute;
@@ -27,6 +16,7 @@ position: absolute;
     padding: 20px 10px;
     background-color: #fff;
     border-radius: 5px;
+    background: url(../images/blackbg.png)
 }
 .loginLogo{
     width: 150px;
@@ -36,6 +26,7 @@ position: absolute;
 .loginInner {
     .layui-tab-title li{
         width: 220px;
+        color: #fff;
     }
 }
 .loginBtn{
