--- a/public/default/server/css/login.css
+++ b/public/default/server/css/login.css
@@ -147,3 +147,12 @@
   line-height: 30px;
   padding-top: 15px;
 }
+
+
+.erweimatext {
+  font-size: 16px;
+  text-align: center;
+  line-height: 30px;
+  color: red;
+  margin-top:35%;
+}
