--- a/public/default/server/css/style.css
+++ b/public/default/server/css/style.css
@@ -501,4 +501,25 @@
   cursor: pointer;
 }
 
-
+/*咨询消息新页面*/
+.tablenotice {
+  font-size: 14px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+.exampletable {
+  width: 600px;
+  font-size: 14px;
+}
+.exampletable tr td {
+  padding: 10px 0;
+}
+.exampletable tr td:first-child {
+  width: 130px;
+}
+.exampletable .inputs {
+  width: 360px;
+  height: 30px;
+  line-height: 30px;
+  padding: 0 10px;
+}
