--- a/public/default/server/css/chat.css
+++ b/public/default/server/css/chat.css
@@ -4,39 +4,19 @@
   box-sizing: border-box;
 }
 
-body,
-html {
-  overflow: hidden;
-}
 
-body {
+
+.dwrap {
   position: relative;
   width: 100%;
   height: 100%;
+  min-height: 700px;
   background: url(../images/dialogbg.jpg) center;
   background-size: cover;
-  color: #4d4d4d;
 }
-
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-ul {
-
-}
-
-#chat {
-  margin: 20px auto;
-  width: 800px;
-  height: 600px;
-}
-
 
 .dialogwrap {
-  position: relative;
+  position: absolute;
   width: 800px;
   height: 600px;
   left: 50%;
@@ -94,6 +74,16 @@ ul {
   color: #333;
   cursor: pointer;
   position: relative;
+}
+
+.dialogwrap .m-list li .unread {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border-radius: 10px;
+  background-color: #fc0909;
+  left: 36px;
+  top: 1px;
 }
 .dialogwrap .m-list li.active {
   background-color: #CAC8C6;
