--- a/public/default/server/css/style.css
+++ b/public/default/server/css/style.css
@@ -630,20 +630,18 @@
   padding-left: 35px!important;
   padding-right: 35px!important;
 }
-
-.levelul {
-  margin-top: 30px;
-}
+/*VIP升级页面样式*/
 .levelul li {
   float: left;
   width: 370px;
   text-align: center;
-  padding: 20px;
-  margin-left: 90px;
+  padding: 80px 20px 20px 20px;
+  margin-top: 30px;
   box-shadow: 0px 0px 20px 2px rgba(74, 92, 130, 0.16);
 }
-.levelul li:first-child {
-  margin-left: 0;
+.levelul li:nth-child(2n) {
+  margin-left: 50px;
+  margin-right: 50px;
 }
 .levelul li .toptext {
   font-size: 22px;
@@ -664,11 +662,6 @@
 .levelul li .level2 {
   color: #00C151;
 }
-.levelul li .lipswrap .lip p {
-  max-width: 90%;
-  text-align: left;
-}
-
 .levelul li .level2btn {
   background-color: #00C151;
   border-color: #00C151;
@@ -687,7 +680,10 @@
 .levelul li .lipswrap .lip:last-child {
   padding-bottom: 0;
 }
-
+.levelul li .lipswrap .lip p {
+  max-width: 90%;
+  text-align: left;
+}
 .levelul li .level3 {
   color: #00B1B5;
 }
@@ -698,12 +694,13 @@
 .levelul li .level3inner {
   font-size: 14px;
   color: #A8ACB9;
+  padding: 60px 0;
 }
 .levelul li .level3inner .level3left {
-  width: 36px;
-  line-height: 23px;
+  width: 48px;
+  line-height: 40px;
   text-align: center;
-  letter-spacing: 4px;
+  letter-spacing: 10px;
 }
 .levelul li .level3inner .level3right {
   border-left: 1px solid #A8ACB9;
@@ -713,11 +710,19 @@
 .levelul li .level3inner .level3right p {
   text-align: left;
   font-size: 18px;
-  line-height: 25px;
+  line-height: 40px;
   color: #00B1B5;
 }
 .levelul li .level3inner .level3right span {
   display: block;
   text-align: left;
-  line-height: 22px;
+  line-height: 40px;
+}
+.levelul .li3 {
+  background: url(../images/tips.png) center top no-repeat;
+}
+@media (max-width: 1000px){
+  .levelul li:nth-child(2n){
+    margin-left: 0;
+  }
 }
