--- a/public/default/server/css/style.css
+++ b/public/default/server/css/style.css
@@ -134,6 +134,11 @@
   height: 60px;
   z-index: 10;
 }
+.uploadImgWrap .imgHome img {
+  width:60px;
+  height: 60px;
+}
+
 .editBtns {
   width: 100px;
 }
